fixed dark mode toggle to only display white borders of blog posts on the blog html instead of both

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -29,5 +29,6 @@ p {
     /* flex-wrap: wrap; */
     font-size: 1.3em;
     padding-top: 5px;
+    padding-right: 40px;
     padding-left: 40px;
 }
