--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,3 +54,7 @@ img {
     width: 24px;
     height: 24px;
   } */
+
+ div{
+    border: 1px solid white;
+}
